--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -56,66 +56,18 @@
   font-style: italic;
 }
 
-.shadows-into-light-regular {
-  font-family: 'Shadows Into Light', cursive;
-  font-weight: 400;
-  font-style: normal;
-}
-
 .coming-soon-regular {
   font-family: 'Coming Soon', cursive;
   font-weight: 400;
   font-style: normal;
 }
 
-.handlee-regular {
-  font-family: 'Handlee', cursive;
-  font-weight: 400;
-  font-style: normal;
-}
-
-.courier-prime-regular {
-  font-family: 'Courier Prime', monospace;
-  font-weight: 400;
-  font-style: normal;
-}
-
-.courier-prime-bold {
-  font-family: 'Courier Prime', monospace;
-  font-weight: 700;
-  font-style: normal;
-}
-
-.courier-prime-regular-italic {
-  font-family: 'Courier Prime', monospace;
-  font-weight: 400;
-  font-style: italic;
-}
-
-.courier-prime-bold-italic {
-  font-family: 'Courier Prime', monospace;
-  font-weight: 700;
-  font-style: italic;
-}
-
-#app {
-  max-width: 1280px;
-  margin: 0 0;
-  font-weight: normal;
-}
-
 a,
 .green {
   text-decoration: none;
-  color: hsla(160, 100%, 37%, 1);
+  color: rgb(0, 0, 0);
   transition: 0.4s;
   padding: 3px;
-}
-
-@media (hover: hover) {
-  a:hover {
-    background-color: hsla(160, 100%, 37%, 0.2);
-  }
 }
 
 @media (min-width: 1024px) {
